# ChangeLog for media-gfx/inkscape
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.230 2015/04/30 05:58:14 jer Exp $

  30 Apr 2015; Jeroen Roovers <jer@gentoo.org> inkscape-0.91.ebuild:
  Marked ~ppc64 (bug #538520).

  28 Apr 2015; Jeroen Roovers <jer@gentoo.org> inkscape-0.48.5-r1.ebuild:
  Stable for PPC64 (bug #545680).

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> inkscape-0.48.5-r1.ebuild:
  ppc stable wrt bug #545680

  09 Apr 2015; Agostino Sarubbo <ago@gentoo.org> inkscape-0.48.5-r1.ebuild:
  Stable for x86, wrt bug #545680

  08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> inkscape-0.48.5-r1.ebuild:
  Stable for amd64, wrt bug #545680

  07 Apr 2015; Jeroen Roovers <jer@gentoo.org> inkscape-0.48.5-r1.ebuild:
  Stable for HPPA (bug #545680).

  02 Feb 2015; Jeroen Roovers <jer@gentoo.org> inkscape-0.91.ebuild:
  Marked ~hppa (bug #538520).

  01 Feb 2015; Tim Harder <radhermit@gentoo.org> -inkscape-0.91_pre3-r2.ebuild,
  -inkscape-0.91_pre4.ebuild, -files/inkscape-0.91_pre3-poppler-0.29.patch:
  Remove old.

*inkscape-0.91 (01 Feb 2015)

  01 Feb 2015; Tim Harder <radhermit@gentoo.org> +inkscape-0.91.ebuild:
  Version bump.

*inkscape-0.91_pre4 (26 Jan 2015)

  26 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +inkscape-0.91_pre4.ebuild,
  -inkscape-0.91_pre3-r1.ebuild:
  Add new prerelease. Remove old.

*inkscape-0.48.5-r1 (06 Jan 2015)

  06 Jan 2015; Justin Lecher <jlec@gentoo.org> +inkscape-0.48.5-r1.ebuild,
  +files/inkscape-0.48.4-poppler-0.29.0.patch, metadata.xml:
  Backport fix for API changes in app-text/poppler-0.29.0, #534392

*inkscape-0.91_pre3-r2 (03 Jan 2015)

  03 Jan 2015; Manuel Rüger <mrueg@gentoo.org>
  +files/inkscape-0.91_pre3-poppler-0.29.patch, +inkscape-0.91_pre3-r2.ebuild:
  Fix build with poppler-0.29. See bug #534352

*inkscape-0.91_pre3-r1 (15 Dec 2014)

  15 Dec 2014; Tim Harder <radhermit@gentoo.org> -inkscape-0.91_pre3.ebuild,