@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/inkscape
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.230 2015/04/30 05:58:14 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.231 2015/05/18 11:21:12 dilfridge Exp $
+
+  18 May 2015; Andreas K. Hüttel <dilfridge@gentoo.org> -inkscape-0.48.5.ebuild:
+  Remove old
 
   30 Apr 2015; Jeroen Roovers <jer@gentoo.org> inkscape-0.91.ebuild:
   Marked ~ppc64 (bug #538520).
